--- a/report/main.qmd
+++ b/report/main.qmd
@@ -51,7 +51,9 @@ When you click the **Render** button a document will be generated that includes 
 
 #### Difference-in-Difference Estimation
 
-DID, or Difference-in-Differences, is a quasi-experimental method that utilizes longitudinal data from treatment and control groups. This approach is particularly effective in this design, as it aligns with the quasi-experimental nature of the study. This method aims to create a suitable counterfactual for estimating causal effects by comparing changes over time between the groups. The key assumption behind DID is that in the absence of the treatment, the average change in the outcome for the treatment group would have been the same as the average change for the control group.
+DID, or Difference-in-Differences, is a quasi-experimental method that utilizes longitudinal data from intervention and control groups. This approach is particularly effective in this design, as it aligns with the quasi-experimental nature of the study. This method aims to create a suitable counterfactual for estimating causal effects by comparing changes over time between the groups. The key assumption behind DID is that in the absence of the intervention, the average change in the outcome for the intervention group would have been the same as the average change for the control group. 
+
+Before applying the model, there are a few assumptions to be checked. Most importantly, there need to be parallel trends between the intervention and the control group. Moreover, at the baseline, the allocation of the intervention should not depend on the outcome. The model itself would be formulated as: $Y=\beta 0+\beta 1 *[\text { Time }]+\beta 2^*[\text { Intervention }]+\beta 3^*\left[\text { Time }{ }^* \text { Intervention }\right]+\varepsilon$. As there are different forms of interventions in the study, including discounts, calorie messaging, and combinations of the two, a linear model can be run first to determine which interaction terms (Time * Intervention) should be included. 
 
 ## Conclusion
 
