Change of wording for better flow - DID model analysis

--- a/report/main.qmd
+++ b/report/main.qmd
@@ -56,7 +56,7 @@ DID, or Difference-in-Differences, is a quasi-experimental method that utilizes 
 
 Before applying the model, there are a few assumptions to be checked. Most importantly, there need to be parallel trends between the intervention and the control group. Moreover, at the baseline, the allocation of the intervention should not depend on the outcome. The model itself would be formulated as: $Y=\beta 0+\beta 1 *[\text { Time }]+\beta 2^*[\text { Intervention }]+\beta 3^*\left[\text { Time }{ }^* \text { Intervention }\right]+\varepsilon$. As there are different forms of interventions in the study, including discounts, calorie messaging, and combinations of the two, a linear model can be run first to determine which interaction terms (Time * Intervention) should be included. 
 
-In this proposed model, the key coefficient of interest for evaluating the impact of interventions is that of the interaction terms. Depending on the objectives, the analysis will focus on different coefficients of the interaction terms between time and the specific interventions. For example, to understand whether the interventions lead to increases in zero-calorie beverages, a positive and significant coefficient for zero-calorie beverages would indicate an effective increase in sales due to the intervention. A similar approach will be applied to investigate whether the combination of interventions lead to larger effects. 
+In the proposed model, the coefficients of the interaction terms are crucial for assessing the efficacy of interventions. The analysis will concentrate on these coefficients, which vary depending on the study's goals. For instance, to determine if interventions result in higher sales of zero-calorie beverages, all interventions can be collectively analyzed. A positive and significant coefficient for this interaction term would signify a successful increase in sales attributed to the intervention. Similarly, to explore whether combined interventions have a more substantial effect, the focus would shift to the coefficient of the interaction term representing the combined interventions.
 
 ## Conclusion
 
