--- a/report/main.qmd
+++ b/report/main.qmd
@@ -86,6 +86,10 @@ In the proposed model, the coefficients of the interaction terms are crucial for
 \newpage
 
 # References
+::: {#refs}
+:::
+
+\newpage
 
 # Appendices
 
