--- a/report/main.qmd
+++ b/report/main.qmd
@@ -83,11 +83,13 @@ In the proposed model, the coefficients of the interaction terms are crucial for
 
 ## Linear mixed effect model
 
-Linear Mixed Effects (LME) model is a statistical model that accounts for fixed effects, common trends that are present at all levels of the data, as well as random effects, correlation within groups and variation between groups. The inclusion of random effects makes LMM especially adept at handling hierarchical and longitudinal data, where observations are grouped into different levels.
+Linear Mixed Effects (LME) model is a statistical model that accounts for fixed effects, common trends that are present at all levels of the data, as well as random effects, correlation within groups and variation between groups. The inclusion of random effects makes LMM especially adept at handling hierarchical and longitudinal data, where observations are grouped into different levels. The error terms in LME models are assumed to be independent identically distributed Normal variables with mean zero.
 
-For the data at hand, it is recommended to run a linear regression for each site - intervention combination and compare the estimated parameters. If there are significant differences in estimation for a factor, then a random effect specific to that factor needs to be included in the final LME model.
+For the data at hand, it is recommended to run a linear regression for each site - intervention combination and compare the estimated parameters. If there are significant differences in estimation for a factor, then a random effect specific to that factor needs to be included in the final LME model. 
 
-After model fitting, the assumption that the error terms are independent identically distributed Normal variables with mean zero for LME needs to be confirmed by plotting the residuals.
+## Model diagnostic
+
+Before model fitting, assumptions on data patterns can be confirmed by plotting by groups. After model fitting, assumptions on error terms can be confirmed by plotting the residuals and their QQ plot. Both DID and LME need to be run to check if their results are consistent with each other and if not, what would be the reason for their disagreement.
 
 
 
