--- a/report/main.qmd
+++ b/report/main.qmd
@@ -83,15 +83,23 @@ In the proposed model, the coefficients of the interaction terms are crucial for
 
 ## Linear mixed effect model
 
-Linear Mixed Effects (LME) model is a statistical model that accounts for fixed effects, common trends that are present at all levels of the data, as well as random effects, correlation within groups and variation between groups. The inclusion of random effects makes LMM especially adept at handling hierarchical and longitudinal data, where observations are grouped into different levels. The error terms in LME models are assumed to be independent identically distributed Normal variables with mean zero.
+Linear Mixed Effects (LME) model is a statistical model that accounts for fixed effects, common trends that are present at all levels of the data, as well as random effects, correlation within groups and variation between groups. The inclusion of random effects makes LME especially adept at handling hierarchical and longitudinal data, where observations are grouped into different levels. The error terms in LME models are assumed to be independent identically distributed Normal variables with mean zero.
 
 For the data at hand, it is recommended to run a linear regression for each site - intervention combination and compare the estimated parameters. If there are significant differences in estimation for a factor, then a random effect specific to that factor needs to be included in the final LME model. 
 
-## Model diagnostic
+## Recommendation
 
-Before model fitting, assumptions on data patterns can be confirmed by plotting by groups. After model fitting, assumptions on error terms can be confirmed by plotting the residuals and their QQ plot. Both DID and LME need to be run to check if their results are consistent with each other and if not, what would be the reason for their disagreement. A model selection criterion such as AIC or likelihood ratio can be used to choose between DID and LME as the final model.
+For the first question, we recommend using the following ANOVA model
+$$\text{Sales} = \beta_0+\beta_1\times\text{Intervention}$$
+for each of the sites with the pre-intervention period being the reference. The estimated coefficient for each intervention method will then be compared across sites. If there are any significant differences between these estimations, a LME model with site dependent random effects is recommended. For the second question, we recommend using the following ANOVA model
+$$\text{Sales} = \beta_0+\beta_1\times\text{Site}$$
+for each of the intervention. The estimated coefficient for each site will then be compared across interventions. If there are any significant differences between these estimations, a LME model with intervention dependent random effects is recommended. For the third question, we recommend using the following ANOVA model
+$$\text{Sales} = \beta_0+\beta_1\times\text{Calorie } +\beta_2\times\text{Excercise}$$
+for each of the sites with the combination period being the reference. Using the same method as the first question, if there are any significant differences between the estimated coefficients, a LME model with site dependent random effects is recommended. For the final question, we recommend using the following ANOVA model
+$$\text{Sales} = \beta_0+\beta_1\times\text{Calorie}$$
+for each of the sites with the calorie admonishment period being the reference. Again, if there are any significant differences between the estimated coefficients, a LME model with site dependent random effects is recommended. Note that the sales in these model refer to the trend extracted in the EDA step.
 
-
+If the sales trends are found to be linear for each intervention period, the time coviariate can be added to the models above, turning them into ANCOVA models. In this case, only the pre-intervention period before the third intervention should be kept for the analysis as the time covariate needs to be reset for each intervention period as well as the pre-intervention period.
 
 
 # Conclusion
