new model ANCOVA first attempt

--- a/report/main.qmd
+++ b/report/main.qmd
@@ -59,7 +59,7 @@ The dataset includes variables related to time, sales, place, and intervention. 
 | Zero-calorie beverages sold | Continuous  |  \-  |
 |    Other beverages sold     | Continuous  |  \-  |
 
-: **Description of variables** {#tbl-vars tbl-colwidths="[35,25]"}
+: **Description of variables** {#tbl-vars tbl-colwidths="\[35,25\]"}
 
 In addition to the periods that were not recorded at the beginning of the study in sites B and C, there are nine missing values for sales of zero-calorie and sugary beverages. The missing observations correspond to the last week of site B and two days of site C. Aside from the missing information at the beginning and end of the study, the missing values are unrelated to any specific factor. Furthermore, the sales data for other beverages and the total amount have several missing values, but they do not affect this analysis.
 
@@ -73,13 +73,9 @@ In particular, @fig-1 shows some important characteristics of the dataset. First
 
 # Formal analysis
 
-## Difference-in-Difference Estimation
+## ANCOVA
 
-DID, or Difference-in-Differences, is a quasi-experimental method that utilizes longitudinal data from intervention and control groups [@angrist_mostly_2008]. This approach is particularly effective in this design, as it aligns with the quasi-experimental nature of the study. This method aims to create a suitable counterfactual for estimating causal effects by comparing changes over time between the groups. The key assumption behind DID is that in the absence of the intervention, the average change in the outcome for the intervention group would have been the same as the average change for the control group. 
-
-Before applying the model, there are a few assumptions to be checked. Most importantly, there need to be parallel trends between the intervention and the control group. Moreover, at the baseline, the allocation of the intervention should not depend on the outcome. The model itself would be formulated as: $Y=\beta 0+\beta 1 *[\text { Time }]+\beta 2^*[\text { Intervention }]+\beta 3^*\left[\text { Time }{ }^* \text { Intervention }\right]+\varepsilon$. As there are different forms of interventions in the study, including discounts, calorie messaging, and combinations of the two, a linear model can be run first to determine which interaction terms (Time * Intervention) should be included. 
-
-In the proposed model, the coefficients of the interaction terms are crucial for assessing the efficacy of interventions. The analysis will concentrate on these coefficients, which vary depending on the study's goals. For instance, to determine if interventions result in higher sales of zero-calorie beverages, all interventions can be collectively analyzed. A positive and significant coefficient for this interaction term would signify a successful increase in sales attributed to the intervention. Similarly, to explore whether combined interventions have a more substantial effect, the focus would shift to the coefficient of the interaction term representing the combined interventions.
+Analysis of Covariance (ANCOVA) is a statistical technique that merges aspects of variance analysis with linear regression to evaluate differences across various groups while adjusting for variance from other variables, known as covariates, which is time in this study. ANCOVA will allow controls for pre-existing differences across the three hospital sites and any baseline consumption patterns. This is crucial, considering the interventions' diversity ranging from visual calorie content presentations to price discounts and their combinations. By adjusting for these variables, ANCOVA not only enhances the accuracy of the findings but also provides a deeper understanding of each intervention's unique contribution. Given the multi-site, quasi-experimental design of your study, ANCOVA's ability to account for covariates will be particularly beneficial in isolating the true effects of your interventions, ensuring that any observed changes in beverage consumption can be directly attributed to your strategies, rather than external or site-specific factors.
 
 # Conclusion
 
@@ -104,4 +100,3 @@ In the proposed model, the coefficients of the interaction terms are crucial for
 
 ![**ACF and PACF by Beverage and Site**](../figs/eda-4_acf-pacf.png){#fig-4}
 :::
-
