--- a/reference/ref.bib
+++ b/reference/ref.bib
@@ -14,3 +14,18 @@
   title = {Mostly Harmless Econometrics: An Empiricist's Companion},
   year = 2008
 }
+
+
+@book{ChatfieldXing:2019,
+  title = {The Analysis of Time Series: An Introduction with {{R}}},
+  shorttitle = {The Analysis of Time Series},
+  author = {Chatfield, Christopher and Xing, Haipeng},
+  date = {2019},
+  series = {Chapman \& {{Hall}}/{{CRC}} Texts in Statistical Science Series},
+  edition = {Seventh edition},
+  publisher = {{CRC Press, Taylor \& Francis Group}},
+  location = {{Boca Raton}},
+  isbn = {978-1-138-06613-7 978-1-4987-9563-0},
+  pagetotal = {398},
+  keywords = {Time-series analysis}
+}
