--- a/report/main.qmd
+++ b/report/main.qmd
@@ -89,30 +89,28 @@ This approach offers the advantage of simplicity and clear interpretation, allow
 
 Linear Mixed Effects (LME) model is a statistical model that accounts for fixed effects, common trends that are present at all levels of the data, as well as random effects, correlation within groups and variation between groups. The inclusion of random effects makes LME especially adept at handling hierarchical and longitudinal data, where observations are grouped into different levels. The error terms in LME models are assumed to be independent identically distributed Normal variables with mean zero.
 
-For the data at hand, it is recommended to run a linear regression for each site - intervention combination and compare the estimated parameters. If there are significant differences in estimation for a factor, then a random effect specific to that factor needs to be included in the final LME model. 
+For the data at hand, it is recommended to run a linear regression for each site - intervention combination and compare the estimated parameters. If there are significant differences in estimation for a factor, then a random effect specific to that factor needs to be included in the final LME model.
 
 ## Recommendation
 
-For the first question, we recommend using the following ANOVA model
-$$\text{Sales} = \beta_0+\beta_1\times\text{Intervention}$$
-for each of the sites with the pre-intervention period being the reference. The estimated coefficient for each intervention method will then be compared across sites. If there are any significant differences between these estimations, a LME model with site dependent random effects is recommended. For the second question, we recommend using the following ANOVA model
-$$\text{Sales} = \beta_0+\beta_1\times\text{Site}$$
-for each of the intervention. The estimated coefficient for each site will then be compared across interventions. If there are any significant differences between these estimations, a LME model with intervention dependent random effects is recommended. For the third question, we recommend using the following ANOVA model
+For the first and second question, we recommend using the following ANOVA model 
+$$\text{Sales} = \beta_0+\beta_1\times\text{Intervention}+\beta_2\times\text{Site}$$
+with the pre-intervention period being the reference. For the third question, we recommend using the following ANOVA model 
 $$\text{Sales} = \beta_0+\beta_1\times\text{Calorie } +\beta_2\times\text{Excercise}$$
-for each of the sites with the combination period being the reference. Using the same method as the first question, if there are any significant differences between the estimated coefficients, a LME model with site dependent random effects is recommended. For the final question, we recommend using the following ANOVA model
+with the combination period being the reference. For the final question, we recommend using the following ANOVA model 
 $$\text{Sales} = \beta_0+\beta_1\times\text{Calorie}$$
-for each of the sites with the calorie admonishment period being the reference. Again, if there are any significant differences between the estimated coefficients, a LME model with site dependent random effects is recommended. Note that the sales in these model refer to the trend extracted in the EDA step.
+with the calorie admonishment period being the reference. In the model for the second question, we recommend to first run a preliminary ANOVA for each of the intervention and the pre-intervention period. If there are any significant differences between the estimated coefficients between the interventions, a LME model with intervention dependent random effects is recommended. A similar strategy needs to be applied to the other questions, but the preliminary ANOVA is performed for each site and site dependent random effects is added when differences are significant instead. The reason for these preliminary analyses is to determine if LME is necessary or not. Note that the sales in these model refer to the trend extracted in the EDA step. After the models are fitted, the residuals need to be visualized via scatter plot, autocorrelation plot and QQ-plot to confirm the independent, equal variance and normal error assumptions for both ANOVA and LME.
 
 If the sales trends are found to be linear for each intervention period, the time coviariate can be added to the models above, turning them into ANCOVA models. In this case, only the pre-intervention period before the third intervention should be kept for the analysis as the time covariate needs to be reset for each intervention period as well as the pre-intervention period.
 
-
 # Conclusion
 
-The study employs ANOVA/ANCOVA and LME models to analyze the effectiveness of interventions on beverage sales across hospitals, addressing four research questions. ANOVA models initially identify differences in intervention effects, while LME models are recommended for deeper analysis when significant variations are observed. This approach ensures a thorough investigation into how each intervention influences beverage choices, the impact of site characteristics, and the effectiveness of calorie information and exercise prompts. The study's methodology provides a clear path to understanding which interventions work best, promoting healthier beverage consumptions.
+The study employs ANOVA/ANCOVA and LME models to analyze the effectiveness of interventions on beverage sales across hospitals, addressing four research questions. Preliminary ANOVA models are used to identify differences in intervention and site effects. LME models are recommended for deeper analysis when significant variations are observed and ANOVA models are recommended otherwise. This approach ensures a thorough investigation into how each intervention influences beverage choices, the impact of site characteristics, and the effectiveness of calorie information and exercise prompts. The study's methodology provides a clear path to understanding which interventions work best, promoting healthier beverage consumption.
 
 \newpage
 
 # References
+
 ::: {#refs}
 :::
 
